--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bodunde/states-and-local-govt",
+    "name": "raphyabak/state-lga",
     "description": "Populates your DB with all the states in Nigeria and their local governments. It also creates the models for you",
     "license": "MIT",
     "authors": [
