--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
         }
     },
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": "~5"
+        "php": ">=5.4.0"
     }
 }
